syntax="proto3";
package TagDataSender;

service TagDataSenderService {
  rpc Send (TagList) returns (Res) {}
}

message TagList {
  message Tag {
    string tagId = 1;
    int32 antennaNo = 2;
    float rssi = 3;
    float frequency = 4;
    float phase = 5;
    float doppler = 6;
  }
  string readTime = 1;
  repeated Tag tags = 2;
}

message Res {
  int32 status = 1;
}
